# terminal-dialogue

./: .gitignore  CMakeLists.txt  README.md  demo.cpp  dialog.cpp  dialog.h  log.md
core/: CMakeLists.txt  engine.cpp
examples/: CMakeLists.txt  animation_example.cpp  dialogue_example.cpp  engine_example.cpp  frame_example.cpp  line_example.cpp  rectangle_example.cpp  renderer_example.cpp  typing_example.cpp
game/: CMakeLists.txt  entity.cpp  entity_manager.cpp  game.cpp  player.cpp
graphics/: CMakeLists.txt  bresenham.cpp  draw.cpp  frame.cpp  geometry.cpp  ncurses_wrapper.cpp  rectangle.cpp  renderer.cpp  shape.cpp
inc/: entity.h  game.h  player.h
include/terminal_dialogue/core/: engine.hpp
include/terminal_dialogue/game/: entity.hpp  entity_manager.hpp  game.h  game.hpp  player.hpp  state.hpp
include/terminal_dialogue/graphics/: bresenham.hpp  circle.hpp  collisions.hpp  draw.hpp  frame.hpp  geometry.hpp  layer.hpp  ncurses_wrapper.hpp  rectangle.hpp  renderer.hpp  shape.hpp  text.hpp
include/terminal_dialogue/utils/: timer.hpp
src/: CMakeLists.txt  demo.cpp  entity.cpp  game.cpp  player.cpp  typing.cpp
